c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/initialize_static_struct_with_zero.c
struct s {
    int a;
};

// you can't initialize a static struct (or any struct) with a scalar constant
struct s x = 0;